# gaussian-task-grasping

./: .gitignore  HANDOFF_2026-04-17.md  README.md  SOL_CODEBASE_ARCHITECTURE.md  SOL_TRAINING.md  pyproject.toml
robot_lerf/: __init__.py  clip_process.py  scene_backends.py  siglip2_encoder.py  siglip_scene_query.py
robot_lerf/graspnet_baseline/: load_ns_model.py
robot_lerf/graspnet_baseline/graspnetAPI/graspnetAPI/: __init__.py
robot_lerf/graspnet_baseline/graspnetAPI/graspnetAPI/utils/dexnet/grasping/: contacts.py  grasp.py  grasp_quality_config.py  grasp_quality_function.py  graspable_object.py  quality.py
scripts/: gen_grasp.py  generate_siglip2_embeddings.py  prepare_robot_frame_scene.py  train_remote_scene.py  train_scene.sbatch
