[project]
name = "robot_lerf"
version = "0.1.0"

dependencies=[
    "yourdfpy",
    "kornia",
    "autolab-core",
    "python-fcl",
    "pillow",
    "transformers>=4.50.0; python_version >= '3.9'",
    "sentencepiece; python_version >= '3.9'"
]

[tool.setuptools.packages.find]
include = ["robot_lerf*","robot_lerf/graspnet_baseline"]
